added header and started nav

--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Hiking Gear LTD</title>
   </head>
   <body>
     <header>
-      <nav></nav>
+      <div class="logo-container">
+        <img src="./assets/logo.jpg" alt="company logo" />
+      </div>
+      <nav class="navigation-menu">
+        <ul>
+          <li><a href="./">Home</a></li>
+          <li><a href="./menu">Menu</a></li>
+          <li><a href="./our-story">Our Story</a></li>
+          <li><a href="./contact-us">Contact Us</a></li>
+        </ul>
+      </nav>
+      <div class="search-container">
+        <form>
+          <input type="text" />
+          <i class="fas fa-search"></i>
+        </form>
+      </div>
     </header>
-    <main></main>
+    <main>
+      <div class="hero-banner image-text-overlay">
+        <div class="image-text-container">
+          <img src="./assets/hiking.jpg" alt="two people hikimg" />
+        </div>
+        <div class="hero-text-conatiner">
+          <h2 class="hero-title">It's time for hiking</h2>
+          <h4 class="sub-title">Lorem Ipsum</h4>
+          <div><button>CTA</button></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            maximus sed risus semper aliquet. Mauris fringilla leo in nulla
+            ornare feugiat. Nulla ut dolor nec ante ullamcorper vehicula. Aenean
+            mollis eu elit vitae congue. Etiam consequat luctus bibendum.
+            Suspendisse nec blandit nunc, id imperdiet ex. Proin non lorem
+            vestibulum, tempus massa et, ornare risus.
+          </p>
+        </div>
+        div>
+      </div>
+    </main>
     <footer></footer>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="./script.js"></script>
   </body>
 </html>
