nearly completed hero-banner

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <title>Hiking Gear LTD</title>
   </head>
   <body>
@@ -38,10 +44,10 @@
         <div class="image-text-container">
           <img src="./assets/hiking.jpg" alt="two people hikimg" />
         </div>
-        <div class="hero-text-conatiner">
+        <div class="hero-text-container">
           <h2 class="hero-title">It's time for hiking</h2>
-          <h4 class="sub-title">Lorem Ipsum</h4>
-          <div><button>CTA</button></div>
+          <h4 class="hero-sub-title">Lorem Ipsum Dolor</h4>
+          <div><button>CTA Button</button></div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
             maximus sed risus semper aliquet. Mauris fringilla leo in nulla
@@ -51,7 +57,6 @@
             vestibulum, tempus massa et, ornare risus.
           </p>
         </div>
-        div>
       </div>
     </main>
     <footer></footer>
