started on the introduction cards

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </div>
     </header>
     <main>
+      <!-- hero banner  -->
       <div class="hero-banner image-text-overlay">
         <div class="image-text-container">
           <img src="./assets/hiking.jpg" alt="two people hikimg" />
@@ -47,15 +48,60 @@
         <div class="hero-text-container">
           <h2 class="hero-title">It's time for hiking</h2>
           <h4 class="hero-sub-title">Lorem Ipsum Dolor</h4>
-          <div><button>CTA Button</button></div>
+          <br />
+          <br />
+          <div><button>Read More</button></div>
+          <br />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
             maximus sed risus semper aliquet. Mauris fringilla leo in nulla
-            ornare feugiat. Nulla ut dolor nec ante ullamcorper vehicula. Aenean
-            mollis eu elit vitae congue. Etiam consequat luctus bibendum.
-            Suspendisse nec blandit nunc, id imperdiet ex. Proin non lorem
-            vestibulum, tempus massa et, ornare risus.
+            ornare feugiat.
           </p>
+        </div>
+      </div>
+      <!-- cards section  -->
+      <div class="cards-section">
+        <div class="cards-header">
+          <h3 class="cards-title">Let's Go</h3>
+          <p class="cards-sub-title">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            maximus sed risus semper aliquet.
+          </p>
+        </div>
+        <div class="cards-body">
+          <div class="card-item">
+            <div class="card-image-container">
+              <div class="card-image">
+                <img src="https://source.unsplash.com/random" alt="hiking" />
+              </div>
+            </div>
+            <div class="card-description">
+              <h3>Lorem Ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="card-image-container">
+              <div class="card-image">
+                <img src="https://source.unsplash.com/random" alt="hiking" />
+              </div>
+            </div>
+            <div class="card-description">
+              <h3>Lorem Ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="card-image-container">
+              <div class="card-image">
+                <img src="https://source.unsplash.com/random" alt="hiking" />
+              </div>
+            </div>
+            <div class="card-description">
+              <h3>Lorem Ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
