fleshed out the website but it still needs quite a bit of styling

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h4 class="hero-sub-title">Lorem Ipsum Dolor</h4>
           <br />
           <br />
-          <div><button>Read More</button></div>
+          <div><button class="cta_btn">Read More</button></div>
           <br />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
@@ -72,40 +72,215 @@
           <div class="card-item">
             <div class="card-image-container">
               <div class="card-image">
-                <img src="https://source.unsplash.com/random" alt="hiking" />
+                <img src="./assets/lucas.jpg" alt="hiking" />
               </div>
             </div>
             <div class="card-description">
               <h3>Lorem Ipsum</h3>
+              <br />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
           <div class="card-item">
             <div class="card-image-container">
               <div class="card-image">
-                <img src="https://source.unsplash.com/random" alt="hiking" />
+                <img src="./assets/jon.jpg" alt="hiking" />
               </div>
             </div>
             <div class="card-description">
               <h3>Lorem Ipsum</h3>
+              <br />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
           <div class="card-item">
             <div class="card-image-container">
               <div class="card-image">
-                <img src="https://source.unsplash.com/random" alt="hiking" />
+                <img src="./assets/holly.jpg" alt="hiking" />
               </div>
             </div>
             <div class="card-description">
               <h3>Lorem Ipsum</h3>
+              <br />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
         </div>
+        <br />
+        <button class="cta_btn">Show More</button>
+        <br />
+      </div>
+      <!-- image and text section --------------------------------- -->
+      <div class="image-and-text-container">
+        <div class="image-section">
+          <img src="./assets/omer.jpg" alt="people hiking" />
+        </div>
+        <div class="text-section">
+          <h2 class="image-text-title">
+            Discount up to <br />
+            50% on excursions
+          </h2>
+          <p class="image-text-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            maximus sed risus semper aliquet. Mauris fringilla leo in nulla
+            ornare feugiat.
+          </p>
+          <br />
+          <button class="cta_btn">Show More</button>
+        </div>
+      </div>
+      <div class="image-and-text-container">
+        <div class="image-section">
+          <img src="./assets/yev.jpg" alt="people hiking" />
+        </div>
+        <div class="text-section">
+          <h2 class="image-text-title">
+            January's promo <br />
+            buy 1 get 1 free
+          </h2>
+          <p class="image-text-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            maximus sed risus semper aliquet. Mauris fringilla leo in nulla
+            ornare feugiat.
+          </p>
+          <br />
+          <button class="cta_btn">Show More</button>
+        </div>
+      </div>
+      <!-- banner section ------------------------------------------ -->
+      <div class="banner-container banner-first">
+        <img
+          src="https://www.seekpng.com/png/detail/214-2149523_torn-paper-png-clipart-best-ripped-paper.png"
+        />
+        <div class="banner-text">
+          <div class="banner-title">Lorem ipsum dolor sit amet</div>
+          <br />
+          <p class="banner-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            maximus sed risus semper aliquet. Mauris fringilla leo in nulla
+            ornare feugiat.
+          </p>
+        </div>
+      </div>
+      <div class="banner-container banner-second">
+        <img src="assets/brad.jpg" />
+        <div class="banner-text">
+          <div class="banner-title">
+            Explore <br />
+            <span>the World</span>
+          </div>
+          <br />
+        </div>
+      </div>
+      <!-- mini paragraphs---------------------------------------- -->
+      <div class="mini-paragraphs">
+        <div class="paragraph">
+          <div class="paragraph-title">Lorem Ipsum</div>
+          <div class="paragraph-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+            fringilla leo in nulla ornare feugiat.
+          </div>
+        </div>
+        <div class="paragraph">
+          <div class="paragraph-title">Lorem Ipsum</div>
+          <div class="paragraph-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+            fringilla leo in nulla ornare feugiat.
+          </div>
+        </div>
+        <div class="paragraph">
+          <div class="paragraph-title">Lorem Ipsum</div>
+          <div class="paragraph-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+            fringilla leo in nulla ornare feugiat.
+          </div>
+        </div>
+      </div>
+      <!-- testimonial ---------------------------------------------- -->
+      <div class="testimonial-container">
+        <img src="assets/quotation.svg" />
+        <p class="testimonial-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+          maximus sed risus semper aliquet. Mauris fringilla leo in nulla ornare
+          feugiat. onsectetur adipiscing elit. Nullam maximus sed risus semper
+          aliquet.
+        </p>
+        <p class="author-text">Lorem Ipsum</p>
+      </div>
+      <!-- subscribe banner  ------------------------------------------ -->
+      <div class="banner-container banner-third">
+        <img
+          src="https://www.seekpng.com/png/detail/214-2149523_torn-paper-png-clipart-best-ripped-paper.png"
+        />
+        <div class="banner-text">
+          <div class="banner-title">Lorem ipsum dolor sit amet</div>
+          <br />
+          <p class="banner-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            maximus sed risus semper aliquet. Mauris fringilla leo in nulla
+            ornare feugiat.
+          </p>
+          <br />
+          <form class="subscribe-form">
+            <div class="input-container">
+              <input
+                class="subscribe-input"
+                type="email"
+                placeholder="your email"
+              />
+              <div class="label">Subscribe</div>
+            </div>
+          </form>
+        </div>
       </div>
     </main>
-    <footer></footer>
+    <!-- foter section -------------------------------------------- -->
+    <footer>
+      <div class="footer">
+        <div class="footer-information">
+          <div class="footer-title">Lorem Ipsum</div>
+          <p class="footer-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            maximus sed risus semper aliquet. Mauris fringilla leo in nulla
+            ornare feugiat.
+          </p>
+          <div class="social-icons">
+            <img src="assets/fb.svg" />
+            <img src="assets/twitter.svg" />
+            <img src="assets/insta.svg" />
+            <img src="assets/call.svg" />
+          </div>
+        </div>
+        <div>
+          <h3>About</h3>
+          <ul class="about footer-section">
+            <li>History</li>
+            <li>Our Team</li>
+            <li>Brand Guidlines</li>
+            <li>Terms and Conditions</li>
+            <li>Privacy Policy</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Services</h3>
+          <ul class="Services footer-section">
+            <li>How to Order</li>
+            <li>Our Product</li>
+            <li>Order Status</li>
+            <li>Promo</li>
+            <li>Payment Method</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Other</h3>
+          <ul class="other footer-section">
+            <li>Contact Us</li>
+            <li>Help</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
