--- a/index.html
+++ b/index.html
@@ -25,8 +25,21 @@
     <title>Hiking Gear LTD</title>
   </head>
   <body>
+    <div class="modal-window">
+      <div class="mobile-menu">
+        <ul>
+          <li><a href="./">Home</a></li>
+          <li><a href="./menu">Menu</a></li>
+          <li><a href="./our-story">Our Story</a></li>
+          <li><a href="./contact-us">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
     <header>
       <div class="logo-container">
+        <div class="mobile-nav">
+          <img src="./assets/burger-nav.svg" alt="menu open button" />
+        </div>
         <img src="./assets/logo.jpg" alt="company logo" />
       </div>
       <nav class="navigation-menu">
