finished mobile nav

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     <header>
       <div class="logo-container">
         <div class="mobile-nav">
-          <img src="./assets/burger-nav.svg" alt="menu open button" />
+          <div class="burger-menu nav-icon-active">
+            <img src="./assets/burger-nav.svg" alt="menu open button" />
+          </div>
+          <div class="close-menu">X</div>
         </div>
         <img src="./assets/logo.jpg" alt="company logo" />
       </div>
